# teflo_podman_plugin

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AUTHORS  CHANGES.md  MANIFEST.in  Makefile  README.md  dev-requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: e2e.yml
docs/: user.md
jenkins/: Jenkinsfile
patches/: 0001-remove-ansible-base-as-its-no-longer-required-by-ans.patch  0002-Add-support-for-podman-plugin.patch  0003-Fall-back-to-localhost-copying-of-artifacts-for-podm.patch
teflo_podman_plugin/: __init__.py  podman_plugin.py
teflo_podman_plugin/files/: schema.yml  schema_extensions.py
tests/e2e/: requirements.txt  scenario.yml  test.yml
tests/functional/: test_podman_plugin.py
