[metadata]
name = teflo_podman_plugin
version = 0.0.0
description = "teflo provisioner using podman",
long_description = file: README.md
long_description_content_type = text/markdown
author = Brady Pratt
author_email = bpratt@redhat.com
license_file = LICENSE

[options]
packages = find:
include_package_data = True

[options.entry_points]
provisioner_plugins =
    podman_plugin = teflo_podman_plugin:PodmanProvisionerPlugin

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true

[wheel]
universal = 1
